# automated-testing-pipline-exercise

./: .coverage  README.md  calculator.py  conftest.py  l.py  notes.md  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
src/diego_m_calculator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/diego_m_calculator_pkg/: calculator.py
tests/: test_generate_plot_data.py  test_handle_special_notations.py
